--- a/.wordpress-config.json
+++ b/.wordpress-config.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl": "wordpress.theasdfghjkl.com",
+  "baseUrl": "booksummaryclub.com",
   "protocol": "https",
   "hostingWPCOM": false,
   "useACF": true,
